Auth e criação de perfil, compania e primeira unidade adicionada

--- a/.gitignore
+++ b/.gitignore
@@ -27,10 +27,13 @@ yarn-error.log*
 
 # local env files
 .env*.local
+.env
 
 # vercel
 .vercel
 
+seed.ts
+seed*.ts
 # typescript
 *.tsbuildinfo
 next-env.d.ts
